# hello_compute_shader

./: CMakeLists.txt  Problems.md  README.md
doc/: details.md  multiply.md
homework/: Multiply.cpp
include/MuVk/: CreateInfo.h  Debugger.h  FileLoader.h  MuVk.h  Proxy.h  Query.h  Utils.h
include/vulkan/: VmaUsage.h
shader/: atom-compiled.comp  atom.bat  atom.comp  atom.spv  help.txt  multiply.bat  multiply.comp  multiply.spv  ray_tracing-compiled.comp  ray_tracing.bat  ray_tracing.comp  ray_tracing.comp.spv  view_id.bat  view_id.comp  view_id.spv
shader/include/rtx/: rtx.comp
shader/misc/: vs-shaderc-extension-configuration.json
shader/ray_tracing/: Camera.comp  Camera.comph  HitRecord.comp  HitRecord.comph  HitRecordStructure.comph  Hittable.comp  Hittable.comph  Material.comp  Material.comph  MaterialStructure.comph  PointerEx.comph  Random.comp  Random.comph  Ray.comp  Ray.comph  Sphere.comp  Sphere.comph  compile.bat  compile_no_image.bat  makefile  ray_tracing.comp  ray_tracing.comp.spv  ray_tracing_basic.comp  readable.asm  workspace.code-workspace
src/: Atom.cpp  Multiply.cpp  PhysicalDeviceProperties.cpp  ViewID.cpp  VmaUsage.cpp
src/CSRT-vma/: DataDump.h  main.cpp
src/ComputeShaderRayTracing/: DataDump.h  main.cpp
vktool/: vkinfo.bat  vkvia.html  vulkaninfo.html
